parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> S
Rule 1     S -> SELECT_ FROM_ JOIN_ WHERE_ GROUP_BY ORDER_BY
Rule 2     SELECT_ -> SELECT CAMPOS
Rule 3     SELECT_ -> SELECT DISTINCT CAMPOS
Rule 4     CAMPOS -> CAMPO COMA CAMPOS
Rule 5     CAMPOS -> CAMPO
Rule 6     CAMPO -> CADENA PUNTO CADENA AS COMILLA CADENA COMILLA
Rule 7     CAMPO -> CADENA PUNTO CADENA
Rule 8     CAMPO -> FUNC_RESUMEN AS COMILLA CADENA COMILLA
Rule 9     FUNC_RESUMEN -> MIN PAR_IZQ CADENA PUNTO CADENA PAR_DER
Rule 10    FUNC_RESUMEN -> MAX PAR_IZQ CADENA PUNTO CADENA PAR_DER
Rule 11    FUNC_RESUMEN -> COUNT PAR_IZQ CADENA PUNTO CADENA PAR_DER
Rule 12    FUNC_RESUMEN -> COUNT PAR_IZQ DISTINCT CADENA PUNTO CADENA PAR_DER
Rule 13    FROM_ -> FROM CADENA CADENA
Rule 14    FROM_ -> FROM CADENA AS CADENA
Rule 15    FROM_ -> FROM CADENA
Rule 16    JOIN_ -> JOIN_INNER_LEFT JOIN_
Rule 17    JOIN_ -> <empty>
Rule 18    JOIN_INNER_LEFT -> INNER JOIN CADENA CADENA ON COND_W
Rule 19    JOIN_INNER_LEFT -> INNER JOIN CADENA AS CADENA ON COND_W
Rule 20    JOIN_INNER_LEFT -> LEFT JOIN CADENA CADENA ON COND_W
Rule 21    JOIN_INNER_LEFT -> LEFT JOIN CADENA AS CADENA ON COND_W
Rule 22    JOIN_INNER_LEFT -> INNER JOIN CADENA ON COND_W
Rule 23    JOIN_INNER_LEFT -> LEFT JOIN CADENA ON COND_W
Rule 24    WHERE_ -> WHERE COND_W
Rule 25    WHERE_ -> <empty>
Rule 26    COND_W -> CONDICION
Rule 27    COND_W -> CADENA PUNTO CADENA SUBCONSULTA
Rule 28    COND_W -> COND_W AND COND_W
Rule 29    COND_W -> COND_W OR COND_W
Rule 30    COND_W -> PAR_IZQ COND_W OR COND_W PAR_DER
Rule 31    SUBCONSULTA -> IN PAR_IZQ S PAR_DER
Rule 32    SUBCONSULTA -> NOT IN PAR_IZQ S PAR_DER
Rule 33    VALOR -> NUMERO
Rule 34    VALOR -> COMILLA CADENA COMILLA
Rule 35    CONDICION -> CADENA PUNTO CADENA SIGNO VALOR
Rule 36    CONDICION -> CADENA PUNTO CADENA SIGNO CADENA PUNTO CADENA
Rule 37    CONDICION -> CADENA PUNTO CADENA NULLEABLE
Rule 38    NULLEABLE -> IS NOT NULL
Rule 39    NULLEABLE -> IS NULL
Rule 40    SIGNO -> IGUAL
Rule 41    SIGNO -> MAYOR
Rule 42    SIGNO -> MENOR
Rule 43    SIGNO -> MAYOR_IGUAL
Rule 44    SIGNO -> MENOR_IGUAL
Rule 45    SIGNO -> DESIGUAL
Rule 46    GROUP_BY -> GROUP BY CAMPOS_G HAVING_
Rule 47    GROUP_BY -> <empty>
Rule 48    CAMPOS_G -> CADENA PUNTO CADENA COMA CAMPOS_G
Rule 49    CAMPOS_G -> CADENA PUNTO CADENA
Rule 50    HAVING_ -> HAVING FUNC_RESUMEN SIGNO VALOR
Rule 51    HAVING_ -> <empty>
Rule 52    ORDER_BY -> ORDER BY CAMPOS_O
Rule 53    ORDER_BY -> <empty>
Rule 54    CAMPOS_O -> CADENA PUNTO CADENA ORDEN COMA CAMPOS_O
Rule 55    CAMPOS_O -> CADENA PUNTO CADENA ORDEN
Rule 56    ORDEN -> ASC
Rule 57    ORDEN -> DESC
Rule 58    ORDEN -> <empty>

Terminals, with rules where they appear

AND                  : 28
AS                   : 6 8 14 19 21
ASC                  : 56
BY                   : 46 52
CADENA               : 6 6 6 7 7 8 9 9 10 10 11 11 12 12 13 13 14 14 15 18 18 19 19 20 20 21 21 22 23 27 27 34 35 35 36 36 36 36 37 37 48 48 49 49 54 54 55 55
COMA                 : 4 48 54
COMILLA              : 6 6 8 8 34 34
COUNT                : 11 12
DESC                 : 57
DESIGUAL             : 45
DISTINCT             : 3 12
FROM                 : 13 14 15
GROUP                : 46
HAVING               : 50
IGUAL                : 40
IN                   : 31 32
INNER                : 18 19 22
IS                   : 38 39
JOIN                 : 18 19 20 21 22 23
LEFT                 : 20 21 23
MAX                  : 10
MAYOR                : 41
MAYOR_IGUAL          : 43
MENOR                : 42
MENOR_IGUAL          : 44
MIN                  : 9
NOT                  : 32 38
NULL                 : 38 39
NUMERO               : 33
ON                   : 18 19 20 21 22 23
OR                   : 29 30
ORDER                : 52
PAR_DER              : 9 10 11 12 30 31 32
PAR_IZQ              : 9 10 11 12 30 31 32
PUNTO                : 6 7 9 10 11 12 27 35 36 36 37 48 49 54 55
SELECT               : 2 3
WHERE                : 24
error                : 

Nonterminals, with rules where they appear

CAMPO                : 4 5
CAMPOS               : 2 3 4
CAMPOS_G             : 46 48
CAMPOS_O             : 52 54
CONDICION            : 26
COND_W               : 18 19 20 21 22 23 24 28 28 29 29 30 30
FROM_                : 1
FUNC_RESUMEN         : 8 50
GROUP_BY             : 1
HAVING_              : 46
JOIN_                : 1 16
JOIN_INNER_LEFT      : 16
NULLEABLE            : 37
ORDEN                : 54 55
ORDER_BY             : 1
S                    : 31 32 0
SELECT_              : 1
SIGNO                : 35 36 50
SUBCONSULTA          : 27
VALOR                : 35 50
WHERE_               : 1

Parsing method: LALR

state 0

    (0) S' -> . S
    (1) S -> . SELECT_ FROM_ JOIN_ WHERE_ GROUP_BY ORDER_BY
    (2) SELECT_ -> . SELECT CAMPOS
    (3) SELECT_ -> . SELECT DISTINCT CAMPOS

    SELECT          shift and go to state 3

    S                              shift and go to state 1
    SELECT_                        shift and go to state 2

state 1

    (0) S' -> S .



state 2

    (1) S -> SELECT_ . FROM_ JOIN_ WHERE_ GROUP_BY ORDER_BY
    (13) FROM_ -> . FROM CADENA CADENA
    (14) FROM_ -> . FROM CADENA AS CADENA
    (15) FROM_ -> . FROM CADENA

    FROM            shift and go to state 5

    FROM_                          shift and go to state 4

state 3

    (2) SELECT_ -> SELECT . CAMPOS
    (3) SELECT_ -> SELECT . DISTINCT CAMPOS
    (4) CAMPOS -> . CAMPO COMA CAMPOS
    (5) CAMPOS -> . CAMPO
    (6) CAMPO -> . CADENA PUNTO CADENA AS COMILLA CADENA COMILLA
    (7) CAMPO -> . CADENA PUNTO CADENA
    (8) CAMPO -> . FUNC_RESUMEN AS COMILLA CADENA COMILLA
    (9) FUNC_RESUMEN -> . MIN PAR_IZQ CADENA PUNTO CADENA PAR_DER
    (10) FUNC_RESUMEN -> . MAX PAR_IZQ CADENA PUNTO CADENA PAR_DER
    (11) FUNC_RESUMEN -> . COUNT PAR_IZQ CADENA PUNTO CADENA PAR_DER
    (12) FUNC_RESUMEN -> . COUNT PAR_IZQ DISTINCT CADENA PUNTO CADENA PAR_DER

    DISTINCT        shift and go to state 7
    CADENA          shift and go to state 9
    MIN             shift and go to state 11
    MAX             shift and go to state 12
    COUNT           shift and go to state 13

    CAMPOS                         shift and go to state 6
    CAMPO                          shift and go to state 8
    FUNC_RESUMEN                   shift and go to state 10

state 4

    (1) S -> SELECT_ FROM_ . JOIN_ WHERE_ GROUP_BY ORDER_BY
    (16) JOIN_ -> . JOIN_INNER_LEFT JOIN_
    (17) JOIN_ -> .
    (18) JOIN_INNER_LEFT -> . INNER JOIN CADENA CADENA ON COND_W
    (19) JOIN_INNER_LEFT -> . INNER JOIN CADENA AS CADENA ON COND_W
    (20) JOIN_INNER_LEFT -> . LEFT JOIN CADENA CADENA ON COND_W
    (21) JOIN_INNER_LEFT -> . LEFT JOIN CADENA AS CADENA ON COND_W
    (22) JOIN_INNER_LEFT -> . INNER JOIN CADENA ON COND_W
    (23) JOIN_INNER_LEFT -> . LEFT JOIN CADENA ON COND_W

    WHERE           reduce using rule 17 (JOIN_ -> .)
    GROUP           reduce using rule 17 (JOIN_ -> .)
    ORDER           reduce using rule 17 (JOIN_ -> .)
    $end            reduce using rule 17 (JOIN_ -> .)
    PAR_DER         reduce using rule 17 (JOIN_ -> .)
    INNER           shift and go to state 16
    LEFT            shift and go to state 17

    JOIN_                          shift and go to state 14
    JOIN_INNER_LEFT                shift and go to state 15

state 5

    (13) FROM_ -> FROM . CADENA CADENA
    (14) FROM_ -> FROM . CADENA AS CADENA
    (15) FROM_ -> FROM . CADENA

    CADENA          shift and go to state 18


state 6

    (2) SELECT_ -> SELECT CAMPOS .

    FROM            reduce using rule 2 (SELECT_ -> SELECT CAMPOS .)


state 7

    (3) SELECT_ -> SELECT DISTINCT . CAMPOS
    (4) CAMPOS -> . CAMPO COMA CAMPOS
    (5) CAMPOS -> . CAMPO
    (6) CAMPO -> . CADENA PUNTO CADENA AS COMILLA CADENA COMILLA
    (7) CAMPO -> . CADENA PUNTO CADENA
    (8) CAMPO -> . FUNC_RESUMEN AS COMILLA CADENA COMILLA
    (9) FUNC_RESUMEN -> . MIN PAR_IZQ CADENA PUNTO CADENA PAR_DER
    (10) FUNC_RESUMEN -> . MAX PAR_IZQ CADENA PUNTO CADENA PAR_DER
    (11) FUNC_RESUMEN -> . COUNT PAR_IZQ CADENA PUNTO CADENA PAR_DER
    (12) FUNC_RESUMEN -> . COUNT PAR_IZQ DISTINCT CADENA PUNTO CADENA PAR_DER

    CADENA          shift and go to state 9
    MIN             shift and go to state 11
    MAX             shift and go to state 12
    COUNT           shift and go to state 13

    CAMPOS                         shift and go to state 19
    CAMPO                          shift and go to state 8
    FUNC_RESUMEN                   shift and go to state 10

state 8

    (4) CAMPOS -> CAMPO . COMA CAMPOS
    (5) CAMPOS -> CAMPO .

    COMA            shift and go to state 20
    FROM            reduce using rule 5 (CAMPOS -> CAMPO .)


state 9

    (6) CAMPO -> CADENA . PUNTO CADENA AS COMILLA CADENA COMILLA
    (7) CAMPO -> CADENA . PUNTO CADENA

    PUNTO           shift and go to state 21


state 10

    (8) CAMPO -> FUNC_RESUMEN . AS COMILLA CADENA COMILLA

    AS              shift and go to state 22


state 11

    (9) FUNC_RESUMEN -> MIN . PAR_IZQ CADENA PUNTO CADENA PAR_DER

    PAR_IZQ         shift and go to state 23


state 12

    (10) FUNC_RESUMEN -> MAX . PAR_IZQ CADENA PUNTO CADENA PAR_DER

    PAR_IZQ         shift and go to state 24


state 13

    (11) FUNC_RESUMEN -> COUNT . PAR_IZQ CADENA PUNTO CADENA PAR_DER
    (12) FUNC_RESUMEN -> COUNT . PAR_IZQ DISTINCT CADENA PUNTO CADENA PAR_DER

    PAR_IZQ         shift and go to state 25


state 14

    (1) S -> SELECT_ FROM_ JOIN_ . WHERE_ GROUP_BY ORDER_BY
    (24) WHERE_ -> . WHERE COND_W
    (25) WHERE_ -> .

    WHERE           shift and go to state 27
    GROUP           reduce using rule 25 (WHERE_ -> .)
    ORDER           reduce using rule 25 (WHERE_ -> .)
    $end            reduce using rule 25 (WHERE_ -> .)
    PAR_DER         reduce using rule 25 (WHERE_ -> .)

    WHERE_                         shift and go to state 26

state 15

    (16) JOIN_ -> JOIN_INNER_LEFT . JOIN_
    (16) JOIN_ -> . JOIN_INNER_LEFT JOIN_
    (17) JOIN_ -> .
    (18) JOIN_INNER_LEFT -> . INNER JOIN CADENA CADENA ON COND_W
    (19) JOIN_INNER_LEFT -> . INNER JOIN CADENA AS CADENA ON COND_W
    (20) JOIN_INNER_LEFT -> . LEFT JOIN CADENA CADENA ON COND_W
    (21) JOIN_INNER_LEFT -> . LEFT JOIN CADENA AS CADENA ON COND_W
    (22) JOIN_INNER_LEFT -> . INNER JOIN CADENA ON COND_W
    (23) JOIN_INNER_LEFT -> . LEFT JOIN CADENA ON COND_W

    WHERE           reduce using rule 17 (JOIN_ -> .)
    GROUP           reduce using rule 17 (JOIN_ -> .)
    ORDER           reduce using rule 17 (JOIN_ -> .)
    $end            reduce using rule 17 (JOIN_ -> .)
    PAR_DER         reduce using rule 17 (JOIN_ -> .)
    INNER           shift and go to state 16
    LEFT            shift and go to state 17

    JOIN_INNER_LEFT                shift and go to state 15
    JOIN_                          shift and go to state 28

state 16

    (18) JOIN_INNER_LEFT -> INNER . JOIN CADENA CADENA ON COND_W
    (19) JOIN_INNER_LEFT -> INNER . JOIN CADENA AS CADENA ON COND_W
    (22) JOIN_INNER_LEFT -> INNER . JOIN CADENA ON COND_W

    JOIN            shift and go to state 29


state 17

    (20) JOIN_INNER_LEFT -> LEFT . JOIN CADENA CADENA ON COND_W
    (21) JOIN_INNER_LEFT -> LEFT . JOIN CADENA AS CADENA ON COND_W
    (23) JOIN_INNER_LEFT -> LEFT . JOIN CADENA ON COND_W

    JOIN            shift and go to state 30


state 18

    (13) FROM_ -> FROM CADENA . CADENA
    (14) FROM_ -> FROM CADENA . AS CADENA
    (15) FROM_ -> FROM CADENA .

    CADENA          shift and go to state 31
    AS              shift and go to state 32
    INNER           reduce using rule 15 (FROM_ -> FROM CADENA .)
    LEFT            reduce using rule 15 (FROM_ -> FROM CADENA .)
    WHERE           reduce using rule 15 (FROM_ -> FROM CADENA .)
    GROUP           reduce using rule 15 (FROM_ -> FROM CADENA .)
    ORDER           reduce using rule 15 (FROM_ -> FROM CADENA .)
    $end            reduce using rule 15 (FROM_ -> FROM CADENA .)
    PAR_DER         reduce using rule 15 (FROM_ -> FROM CADENA .)


state 19

    (3) SELECT_ -> SELECT DISTINCT CAMPOS .

    FROM            reduce using rule 3 (SELECT_ -> SELECT DISTINCT CAMPOS .)


state 20

    (4) CAMPOS -> CAMPO COMA . CAMPOS
    (4) CAMPOS -> . CAMPO COMA CAMPOS
    (5) CAMPOS -> . CAMPO
    (6) CAMPO -> . CADENA PUNTO CADENA AS COMILLA CADENA COMILLA
    (7) CAMPO -> . CADENA PUNTO CADENA
    (8) CAMPO -> . FUNC_RESUMEN AS COMILLA CADENA COMILLA
    (9) FUNC_RESUMEN -> . MIN PAR_IZQ CADENA PUNTO CADENA PAR_DER
    (10) FUNC_RESUMEN -> . MAX PAR_IZQ CADENA PUNTO CADENA PAR_DER
    (11) FUNC_RESUMEN -> . COUNT PAR_IZQ CADENA PUNTO CADENA PAR_DER
    (12) FUNC_RESUMEN -> . COUNT PAR_IZQ DISTINCT CADENA PUNTO CADENA PAR_DER

    CADENA          shift and go to state 9
    MIN             shift and go to state 11
    MAX             shift and go to state 12
    COUNT           shift and go to state 13

    CAMPO                          shift and go to state 8
    CAMPOS                         shift and go to state 33
    FUNC_RESUMEN                   shift and go to state 10

state 21

    (6) CAMPO -> CADENA PUNTO . CADENA AS COMILLA CADENA COMILLA
    (7) CAMPO -> CADENA PUNTO . CADENA

    CADENA          shift and go to state 34


state 22

    (8) CAMPO -> FUNC_RESUMEN AS . COMILLA CADENA COMILLA

    COMILLA         shift and go to state 35


state 23

    (9) FUNC_RESUMEN -> MIN PAR_IZQ . CADENA PUNTO CADENA PAR_DER

    CADENA          shift and go to state 36


state 24

    (10) FUNC_RESUMEN -> MAX PAR_IZQ . CADENA PUNTO CADENA PAR_DER

    CADENA          shift and go to state 37


state 25

    (11) FUNC_RESUMEN -> COUNT PAR_IZQ . CADENA PUNTO CADENA PAR_DER
    (12) FUNC_RESUMEN -> COUNT PAR_IZQ . DISTINCT CADENA PUNTO CADENA PAR_DER

    CADENA          shift and go to state 38
    DISTINCT        shift and go to state 39


state 26

    (1) S -> SELECT_ FROM_ JOIN_ WHERE_ . GROUP_BY ORDER_BY
    (46) GROUP_BY -> . GROUP BY CAMPOS_G HAVING_
    (47) GROUP_BY -> .

    GROUP           shift and go to state 41
    ORDER           reduce using rule 47 (GROUP_BY -> .)
    $end            reduce using rule 47 (GROUP_BY -> .)
    PAR_DER         reduce using rule 47 (GROUP_BY -> .)

    GROUP_BY                       shift and go to state 40

state 27

    (24) WHERE_ -> WHERE . COND_W
    (26) COND_W -> . CONDICION
    (27) COND_W -> . CADENA PUNTO CADENA SUBCONSULTA
    (28) COND_W -> . COND_W AND COND_W
    (29) COND_W -> . COND_W OR COND_W
    (30) COND_W -> . PAR_IZQ COND_W OR COND_W PAR_DER
    (35) CONDICION -> . CADENA PUNTO CADENA SIGNO VALOR
    (36) CONDICION -> . CADENA PUNTO CADENA SIGNO CADENA PUNTO CADENA
    (37) CONDICION -> . CADENA PUNTO CADENA NULLEABLE

    CADENA          shift and go to state 44
    PAR_IZQ         shift and go to state 45

    COND_W                         shift and go to state 42
    CONDICION                      shift and go to state 43

state 28

    (16) JOIN_ -> JOIN_INNER_LEFT JOIN_ .

    WHERE           reduce using rule 16 (JOIN_ -> JOIN_INNER_LEFT JOIN_ .)
    GROUP           reduce using rule 16 (JOIN_ -> JOIN_INNER_LEFT JOIN_ .)
    ORDER           reduce using rule 16 (JOIN_ -> JOIN_INNER_LEFT JOIN_ .)
    $end            reduce using rule 16 (JOIN_ -> JOIN_INNER_LEFT JOIN_ .)
    PAR_DER         reduce using rule 16 (JOIN_ -> JOIN_INNER_LEFT JOIN_ .)


state 29

    (18) JOIN_INNER_LEFT -> INNER JOIN . CADENA CADENA ON COND_W
    (19) JOIN_INNER_LEFT -> INNER JOIN . CADENA AS CADENA ON COND_W
    (22) JOIN_INNER_LEFT -> INNER JOIN . CADENA ON COND_W

    CADENA          shift and go to state 46


state 30

    (20) JOIN_INNER_LEFT -> LEFT JOIN . CADENA CADENA ON COND_W
    (21) JOIN_INNER_LEFT -> LEFT JOIN . CADENA AS CADENA ON COND_W
    (23) JOIN_INNER_LEFT -> LEFT JOIN . CADENA ON COND_W

    CADENA          shift and go to state 47


state 31

    (13) FROM_ -> FROM CADENA CADENA .

    INNER           reduce using rule 13 (FROM_ -> FROM CADENA CADENA .)
    LEFT            reduce using rule 13 (FROM_ -> FROM CADENA CADENA .)
    WHERE           reduce using rule 13 (FROM_ -> FROM CADENA CADENA .)
    GROUP           reduce using rule 13 (FROM_ -> FROM CADENA CADENA .)
    ORDER           reduce using rule 13 (FROM_ -> FROM CADENA CADENA .)
    $end            reduce using rule 13 (FROM_ -> FROM CADENA CADENA .)
    PAR_DER         reduce using rule 13 (FROM_ -> FROM CADENA CADENA .)


state 32

    (14) FROM_ -> FROM CADENA AS . CADENA

    CADENA          shift and go to state 48


state 33

    (4) CAMPOS -> CAMPO COMA CAMPOS .

    FROM            reduce using rule 4 (CAMPOS -> CAMPO COMA CAMPOS .)


state 34

    (6) CAMPO -> CADENA PUNTO CADENA . AS COMILLA CADENA COMILLA
    (7) CAMPO -> CADENA PUNTO CADENA .

    AS              shift and go to state 49
    COMA            reduce using rule 7 (CAMPO -> CADENA PUNTO CADENA .)
    FROM            reduce using rule 7 (CAMPO -> CADENA PUNTO CADENA .)


state 35

    (8) CAMPO -> FUNC_RESUMEN AS COMILLA . CADENA COMILLA

    CADENA          shift and go to state 50


state 36

    (9) FUNC_RESUMEN -> MIN PAR_IZQ CADENA . PUNTO CADENA PAR_DER

    PUNTO           shift and go to state 51


state 37

    (10) FUNC_RESUMEN -> MAX PAR_IZQ CADENA . PUNTO CADENA PAR_DER

    PUNTO           shift and go to state 52


state 38

    (11) FUNC_RESUMEN -> COUNT PAR_IZQ CADENA . PUNTO CADENA PAR_DER

    PUNTO           shift and go to state 53


state 39

    (12) FUNC_RESUMEN -> COUNT PAR_IZQ DISTINCT . CADENA PUNTO CADENA PAR_DER

    CADENA          shift and go to state 54


state 40

    (1) S -> SELECT_ FROM_ JOIN_ WHERE_ GROUP_BY . ORDER_BY
    (52) ORDER_BY -> . ORDER BY CAMPOS_O
    (53) ORDER_BY -> .

    ORDER           shift and go to state 56
    $end            reduce using rule 53 (ORDER_BY -> .)
    PAR_DER         reduce using rule 53 (ORDER_BY -> .)

    ORDER_BY                       shift and go to state 55

state 41

    (46) GROUP_BY -> GROUP . BY CAMPOS_G HAVING_

    BY              shift and go to state 57


state 42

    (24) WHERE_ -> WHERE COND_W .
    (28) COND_W -> COND_W . AND COND_W
    (29) COND_W -> COND_W . OR COND_W

    GROUP           reduce using rule 24 (WHERE_ -> WHERE COND_W .)
    ORDER           reduce using rule 24 (WHERE_ -> WHERE COND_W .)
    $end            reduce using rule 24 (WHERE_ -> WHERE COND_W .)
    PAR_DER         reduce using rule 24 (WHERE_ -> WHERE COND_W .)
    AND             shift and go to state 58
    OR              shift and go to state 59


state 43

    (26) COND_W -> CONDICION .

    AND             reduce using rule 26 (COND_W -> CONDICION .)
    OR              reduce using rule 26 (COND_W -> CONDICION .)
    GROUP           reduce using rule 26 (COND_W -> CONDICION .)
    ORDER           reduce using rule 26 (COND_W -> CONDICION .)
    $end            reduce using rule 26 (COND_W -> CONDICION .)
    PAR_DER         reduce using rule 26 (COND_W -> CONDICION .)
    INNER           reduce using rule 26 (COND_W -> CONDICION .)
    LEFT            reduce using rule 26 (COND_W -> CONDICION .)
    WHERE           reduce using rule 26 (COND_W -> CONDICION .)


state 44

    (27) COND_W -> CADENA . PUNTO CADENA SUBCONSULTA
    (35) CONDICION -> CADENA . PUNTO CADENA SIGNO VALOR
    (36) CONDICION -> CADENA . PUNTO CADENA SIGNO CADENA PUNTO CADENA
    (37) CONDICION -> CADENA . PUNTO CADENA NULLEABLE

    PUNTO           shift and go to state 60


state 45

    (30) COND_W -> PAR_IZQ . COND_W OR COND_W PAR_DER
    (26) COND_W -> . CONDICION
    (27) COND_W -> . CADENA PUNTO CADENA SUBCONSULTA
    (28) COND_W -> . COND_W AND COND_W
    (29) COND_W -> . COND_W OR COND_W
    (30) COND_W -> . PAR_IZQ COND_W OR COND_W PAR_DER
    (35) CONDICION -> . CADENA PUNTO CADENA SIGNO VALOR
    (36) CONDICION -> . CADENA PUNTO CADENA SIGNO CADENA PUNTO CADENA
    (37) CONDICION -> . CADENA PUNTO CADENA NULLEABLE

    CADENA          shift and go to state 44
    PAR_IZQ         shift and go to state 45

    COND_W                         shift and go to state 61
    CONDICION                      shift and go to state 43

state 46

    (18) JOIN_INNER_LEFT -> INNER JOIN CADENA . CADENA ON COND_W
    (19) JOIN_INNER_LEFT -> INNER JOIN CADENA . AS CADENA ON COND_W
    (22) JOIN_INNER_LEFT -> INNER JOIN CADENA . ON COND_W

    CADENA          shift and go to state 62
    AS              shift and go to state 64
    ON              shift and go to state 63


state 47

    (20) JOIN_INNER_LEFT -> LEFT JOIN CADENA . CADENA ON COND_W
    (21) JOIN_INNER_LEFT -> LEFT JOIN CADENA . AS CADENA ON COND_W
    (23) JOIN_INNER_LEFT -> LEFT JOIN CADENA . ON COND_W

    CADENA          shift and go to state 65
    AS              shift and go to state 67
    ON              shift and go to state 66


state 48

    (14) FROM_ -> FROM CADENA AS CADENA .
